log/build_2025-05-04_18-57-30/qbo_driver/stderr.log
  File "/home/qbo-v2/qbo_ws/src/install/qbo_driver/lib/python3.10/site-packages/qbo_driver/listen.py", line 112
    self.get_logger()info(
                     ^^^^
SyntaxError: invalid syntax

